resolve category issues
